# nodemodel

./: .readthedocs.yaml  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  python-package.yml  quality.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
nodemodel/: __init__.py  graph_functions.py  helpers.py  model.py  model_node.py  node_factory.py  utils.py
tests/: test_graph_functions.py  test_helpers.py  test_load_nodes.py  test_model.py  test_model_node.py  test_node_decorator.py  test_node_factory.py  test_submodel.py
